# AdventOfCaml

./: .gitignore  README.md  adventofcamel.opam  dune-project  solution.py
_build/: .db  .digest-db  log
_build/default/: adventofcamel.dune-package  adventofcamel.install  adventofcamel.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: adventofcamel.cma  adventofcamel.cmxa  adventofcamel.cmxs
_build/default/lib/.adventofcamel.objs/byte/: adventofcamel.cmi  adventofcamel.cmo  adventofcamel.cmt
_build/default/lib/.adventofcamel.objs/native/: adventofcamel.cmx
_build/default/lib/.merlin-conf/: lib-adventofcamel
_build/default/test/.adventofcamel.eobjs/byte/: dune__exe__Adventofcamel.cmi  dune__exe__Adventofcamel.cmti
_build/default/test/.adventofcamel.eobjs/native/: dune__exe__Adventofcamel.cmx
_build/default/test/.merlin-conf/: exe-adventofcamel
_build/install/default/lib/adventofcamel/: META  dune-package  opam
lib/: dune
test/: dune
