(lang dune 3.11)

(name adventofcamel)

(generate_opam_files true)

(source
 (github PThorpe92/adventofcamel))

(authors "Preston Thorpe")

(maintainers "PThorpe92")


(license GPL-3.0)

(documentation https://url/to/documentation)

(package
 (name adventofcamel)
 (synopsis "AoC '23")
 (description "Repo for Advent of Code 2023: OCaml edition")
 (depends ocaml dune base core))
